modules/crates/domain/tests/edge_type_safety/compile_fail/created_rejects_grant_as_principal.stderr
error[E0277]: the trait bound `GrantId: Principal` is not satisfied
  --> tests/edge_type_safety/compile_fail/created_rejects_grant_as_principal.rs:11:31
   |
11 |     let _ = Edge::new_created(&creator, &resource);
   |             ----------------- ^^^^^^^^ the trait `Principal` is not implemented for `GrantId`
   |             |
   |             required by a bound introduced by this call
   |
help: the following other types implement trait `Principal`
  --> src/model/principal_resource.rs
   |
   | impl Principal for AgentId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ `AgentId`
...
   | impl Principal for UserId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ `UserId`
...
   | impl Principal for OrgId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^ `OrgId`
...
   | impl Principal for ProjectId {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ProjectId`
note: required by a bound in `Edge::new_created`
  --> src/model/edges.rs
   |
   |     pub fn new_created<P: Principal, R: Resource>(creator: &P, resource: &R) -> Edge {
   |                           ^^^^^^^^^ required by this bound in `Edge::new_created`
